--- a/BSIC.ipynb
+++ b/BSIC.ipynb
@@ -1,19 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "BSIC.ipynb",
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -35,9 +20,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "drive.mount(\"/content/drive\", force_remount=True)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -45,22 +28,22 @@
         "id": "fSLDvCMA0XdS",
         "outputId": "84199b35-b079-4b6f-b1ef-d820448b8cf2"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Mounted at /content/drive\n"
           ]
         }
+      ],
+      "source": [
+        "drive.mount(\"/content/drive\", force_remount=True)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "%cd drive/MyDrive/Butterfly75/"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -68,22 +51,22 @@
         "id": "LIu7ZSE10eTz",
         "outputId": "32baadc5-61c6-4b48-b808-7cc8f29a55f4"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "/content/drive/MyDrive/Butterfly75\n"
           ]
         }
+      ],
+      "source": [
+        "%cd drive/MyDrive/Butterfly75/"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!unzip archive.zip"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -91,11 +74,10 @@
         "id": "Wl4Bnjd30j81",
         "outputId": "3c7af30c-6e32-4b06-ab0e-3db9aac33687"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[1;30;43mStreaming output truncated to the last 5000 lines.\u001b[0m\n",
             "  inflating: train/JULIA/042.jpg     \n",
@@ -5100,14 +5082,14 @@
             "  inflating: valid/ZEBRA LONG WING/5.jpg  \n"
           ]
         }
+      ],
+      "source": [
+        "!unzip archive.zip"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "for i in os.listdir('train'):\n",
-        "  print(i)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -5115,11 +5097,10 @@
         "id": "3SDVjUye0_bR",
         "outputId": "7d5b1ca1-3a7b-4f27-87d0-4ca0cccefc55"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "ADONIS\n",
             "AFRICAN GIANT SWALLOWTAIL\n",
@@ -5198,14 +5179,15 @@
             "ZEBRA LONG WING\n"
           ]
         }
+      ],
+      "source": [
+        "for i in os.listdir('train'):\n",
+        "  print(i)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "for i in os.listdir('train'):\n",
-        "  print(i,len(os.listdir('train/'+i)))"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -5213,11 +5195,10 @@
         "id": "GT3vdt4S1FYE",
         "outputId": "4e8a52cc-37c9-45ae-8903-f4286c2e7039"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "ADONIS 126\n",
             "AFRICAN GIANT SWALLOWTAIL 107\n",
@@ -5296,10 +5277,19 @@
             "ZEBRA LONG WING 108\n"
           ]
         }
+      ],
+      "source": [
+        "for i in os.listdir('train'):\n",
+        "  print(i,len(os.listdir('train/'+i)))"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "YSXWMrbd1Iwr"
+      },
+      "outputs": [],
       "source": [
         "def img_Data(dir_path,target_size,batch,class_lst,preporcssing):\n",
         "  if preporcssing:\n",
@@ -5313,19 +5303,11 @@
         "                                        class_mode='sparse',\n",
         "                                        classes=class_lst,\n",
         "                                        shuffle=True))"
-      ],
-      "metadata": {
-        "id": "YSXWMrbd1Iwr"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "train_data_gen = img_Data('train',(224,224),500,os.listdir('train'),preprocess_input)\n",
-        "valid_data_gen = img_Data('test',(224,224),500,os.listdir('test'),preprocess_input)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -5333,26 +5315,24 @@
         "id": "iJ66wB981RNa",
         "outputId": "03675eb6-5c62-4cde-f1ba-f3ba43129c9f"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Found 9285 images belonging to 75 classes.\n",
             "Found 375 images belonging to 75 classes.\n"
           ]
         }
+      ],
+      "source": [
+        "train_data_gen = img_Data('train',(224,224),500,os.listdir('train'),preprocess_input)\n",
+        "valid_data_gen = img_Data('test',(224,224),500,os.listdir('test'),preprocess_input)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "base_model = tf.keras.applications.MobileNetV2(\n",
-        "            input_shape=(224,224,3), alpha=1.0, include_top=False, weights='imagenet',\n",
-        "            input_tensor=None, pooling=None, classes=1000,\n",
-        "            classifier_activation='softmax')"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -5360,32 +5340,42 @@
         "id": "1jumMObk1g9X",
         "outputId": "40707218-67bf-4338-dfe7-52f593efc9ae"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/mobilenet_v2/mobilenet_v2_weights_tf_dim_ordering_tf_kernels_1.0_224_no_top.h5\n",
             "9412608/9406464 [==============================] - 0s 0us/step\n",
             "9420800/9406464 [==============================] - 0s 0us/step\n"
           ]
         }
+      ],
+      "source": [
+        "base_model = tf.keras.applications.MobileNetV2(\n",
+        "            input_shape=(224,224,3), alpha=1.0, include_top=False, weights='imagenet',\n",
+        "            input_tensor=None, pooling=None, classes=1000,\n",
+        "            classifier_activation='softmax')"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "base_model.trainable = False"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "33pvurqW1wNG"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "base_model.trainable = False"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "wO_-F4Li12d_"
+      },
+      "outputs": [],
       "source": [
         "model = tf.keras.models.Sequential()\n",
         "model.add(base_model)\n",
@@ -5395,18 +5385,11 @@
         "\n",
         "model.compile(optimizer='adam',loss='sparse_categorical_crossentropy',\n",
         "              metrics=['accuracy'])"
-      ],
-      "metadata": {
-        "id": "wO_-F4Li12d_"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "model.summary()"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -5414,11 +5397,10 @@
         "id": "iyRb-Xfg194R",
         "outputId": "88fb5df0-f4bd-4a27-96de-fcba77a91717"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Model: \"sequential\"\n",
             "_________________________________________________________________\n",
@@ -5441,25 +5423,26 @@
             "_________________________________________________________________\n"
           ]
         }
+      ],
+      "source": [
+        "model.summary()"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "elst = callbacks.EarlyStopping(monitor='val_loss',patience=5,mode='min')\n",
-        "save_ck = callbacks.ModelCheckpoint('.mdl_wt.hdf5',save_best_only=False,monitor='val_lose',mode='min')"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "UOdodMLC2CwK"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "elst = callbacks.EarlyStopping(monitor='val_loss',patience=5,mode='min')\n",
+        "save_ck = callbacks.ModelCheckpoint('.mdl_wt.hdf5',save_best_only=False,monitor='val_lose',mode='min')"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "model.fit(train_data_gen,batch_size=500,validation_data=valid_data_gen,callbacks=[elst,save_ck],epochs=10)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -5467,11 +5450,10 @@
         "id": "bEXdTUQq2GnU",
         "outputId": "caf1d61a-5c57-488a-9ae5-72386d4931b6"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Epoch 1/10\n",
             "19/19 [==============================] - 289s 15s/step - loss: 2.0766 - accuracy: 0.5571 - val_loss: 0.8665 - val_accuracy: 0.7573\n",
@@ -5496,16 +5478,34 @@
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "<keras.callbacks.History at 0x7f6f0e0cfb90>"
             ]
           },
+          "execution_count": 14,
           "metadata": {},
-          "execution_count": 14
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "model.fit(train_data_gen,batch_size=500,validation_data=valid_data_gen,callbacks=[elst,save_ck],epochs=10)"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "name": "BSIC.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
